! fix option button disabled states

--- a/examples/standalone.html
+++ b/examples/standalone.html
@@ -1,5 +1,5 @@
 <body>
-  <script src="../lib/src/umd/nlx-chat-widget.js"></script>
+  <script src="https://unpkg.com/nlx-chat-sdk@0.0.1/lib/src/umd/nlx-chat-widget.js"></script>
   <script>
     chat.standalone({
       config: {
