--- a/examples/standalone.html
+++ b/examples/standalone.html
@@ -1,3 +1,6 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
   <script src="https://unpkg.com/nlx-chat-sdk@0.0.3/lib/umd/widget.js"></script>
   <script>
