--- a/packages/widget/src/example/index.html
+++ b/packages/widget/src/example/index.html
@@ -1,2 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 <div id="app"></div>
 <script type="module" src="./index.tsx"></script>
