--- a/packages/widget/src/website/index.html
+++ b/packages/widget/src/website/index.html
@@ -1,4 +1,9 @@
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <title>Chat SDK</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
 
-<div id="app"></div>
-<script type="module" src="./index.tsx"></script>
+<body>
+  <div id="app"></div>
+  <script type="module" src="./index.tsx"></script>
+</body>
