Set up basic website

--- a/packages/widget/src/website/index.html
+++ b/packages/widget/src/website/index.html
@@ -1,6 +1,8 @@
 <head>
   <title>Chat SDK</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
 </head>
 
 <body>
